WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
202980
[GTK][WPE] IconDatabase is not thread safe yet
https://bugs.webkit.org/show_bug.cgi?id=202980
Summary
[GTK][WPE] IconDatabase is not thread safe yet
Carlos Garcia Campos
Reported
2019-10-15 01:47:48 PDT
Current implementation is safer, but we still need to protect members used by both threads.
Attachments
Patch
(10.81 KB, patch)
2019-10-15 01:49 PDT
,
Carlos Garcia Campos
aperez
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Carlos Garcia Campos
Comment 1
2019-10-15 01:49:44 PDT
Created
attachment 380970
[details]
Patch
EWS Watchlist
Comment 2
2019-10-15 01:50:26 PDT
Thanks for the patch. If this patch contains new public API please make sure it follows the guidelines for new WebKit2 GTK+ API. See
http://trac.webkit.org/wiki/WebKitGTK/AddingNewWebKit2API
Adrian Perez
Comment 3
2019-10-21 01:40:50 PDT
Comment on
attachment 380970
[details]
Patch Patch LGTM. Given that all the uses of the database (“m_db” member) are done in the work queue thread, maybe it would be a good thing to add “ASSERT(!isMainThread())” at the top of helper functions like “IconDatabase::createTablesIfNeeded()” to make it clearer that they are not intended to be used directly from the main thread, WDYT?
Carlos Garcia Campos
Comment 4
2019-10-21 01:46:15 PDT
(In reply to Adrian Perez from
comment #3
)
> Comment on
attachment 380970
[details]
> Patch > > Patch LGTM. Given that all the uses of the database (“m_db” member) > are done in the work queue thread, maybe it would be a good thing > to add “ASSERT(!isMainThread())” at the top of helper functions > like “IconDatabase::createTablesIfNeeded()” to make it clearer that > they are not intended to be used directly from the main thread, WDYT?
Sure, I can add it.
Carlos Garcia Campos
Comment 5
2019-10-21 02:21:21 PDT
Committed
r251362
: <
https://trac.webkit.org/changeset/251362
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug